@@ -26,6 +26,9 @@ Release @version@-@release@ Start 05/02/2024 End XX/XX/XXXX
 12. qmail-smtpd.c: added HOSTACCESS to list of env variables used
 - 21/05/2024
 13. svctool: fix mysqldump incompatibility introduced by oracle
+- 22/05/2024
+14. svctool: fix checking for vadddomain path
+15. svctool: fix db creation for MariaDB > v10.3
 
 * Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.7-1.1%{?dist}
 Release 3.0.7-1.1 Start 02/01/2024 End 03/02/2024
